<resources>
    <string name="app_name">Assignment_2</string>
    <string name="Page_Title">Assignment_2</string>
    <string name="Product_TextView">Product Type</string>
    <string name="Manager_Button">Manager</string>
    <string name="TotalAmount_TextView">Total</string>
    <string name="Quantity_TextView">Quantity</string>
    <string name="Buy_Button">BUY</string>
    <string name="ProductList_Name">Name</string>
    <string name="ProductList_Price">Price</string>
    <string name="Product_Restock">RESTOCK</string>
    <string name="Product_History">HISTORY</string>
    <string name="Product_New_Quantity">Enter New Quantity</string>
    <string name="Restock_Ok_Button">OK</string>
    <string name="Restock_Cancel_Button">CANCEL</string>
    <string name="Product_Purchase_Date">Purchase Date</string>
</resources>