<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_ProductType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="100dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Product_TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_Horizontal2"
        app:layout_constraintEnd_toEndOf="@+id/guideline_Vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_Horizontal"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E42FC584"
        android:width="100dp"
        android:text="@string/Manager_Button"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline_Vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_Horizontal"
        app:layout_constraintBottom_toTopOf="@id/guideline_Horizontal2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <NumberPicker
        android:id="@+id/numberPicker_Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_Horizontal3"
        app:layout_constraintEnd_toEndOf="@+id/guideline_Vertical"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_Horizontal2"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_TotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/TotalAmount_TextView"
        app:layout_constraintStart_toEndOf="@+id/guideline_Vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_Horizontal2"
        app:layout_constraintBottom_toTopOf="@id/guideline_Horizontal3"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_QuantitySelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Quantity_TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_Vertical"
        app:layout_constraintTop_toBottomOf="@+id/guideline_Horizontal3"
        app:layout_constraintBottom_toTopOf="@+id/guideline_Horizontal4"
        app:layout_constraintHorizontal_bias="0.1"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E42FC584"
        android:width="100dp"
        android:height="100dp"
        android:text="@string/Buy_Button"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/guideline_Vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_Horizontal3"
        app:layout_constraintBottom_toTopOf="@+id/guideline_Horizontal4" />

    <ListView
        android:id="@+id/listView_ProductList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_Horizontal4"
        tools:listitem="@layout/products_listview" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>